--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "setup": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "php artisan key:generate",
+            "php artisan migrate --seed"
         ]
     },
     "extra": {
