feat: change to the pgsql

--- a/vercel.json
+++ b/vercel.json
@@ -16,13 +16,14 @@
         "APP_NAME": "Vercel Laravel",
         "APP_ENV": "production",
         "APP_KEY": "base64:+naakOVSDszyMPC+wG+lmtfdHGNoSttFwh0NMYW466U=",
-        "APP_DEBUG": "false",
-        "DB_CONNECTION": "mysql",
-        "DB_HOST": "aws.connect.psdb.cloud",
-        "USERNAME": "07sfvpv8uia431iybxoh",
-        "PASSWORD": "pscale_pw_Y7WtdbASLp5fDojqo3JueDLSXFWIWVRX5jLyi0PdMLn",
-        "DATABASE": "breeze",
+        "APP_DEBUG": "true",
         "APP_URL": "https://laravel-vercel-sooty.vercel.app",
+        "DB_CONNECTION": "pgsql",
+        "DB_HOST": "ep-soft-poetry-812794-pooler.ap-southeast-1.aws.neon.tech",
+        "DB_PORT": "5432",
+        "USERNAME": "amm834",
+        "PASSWORD": "tlhLfmqH8XW0",
+        "DATABASE": "neondb",
         "VERCEL_DEMO_MODE": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
