--- a/vercel.json
+++ b/vercel.json
@@ -21,13 +21,8 @@
         "APP_DEBUG": "true",
 
         "DB_CONNECTION": "pgsql",
-        "DB_HOST": "ep-soft-poetry-812794-pooler.ap-southeast-1.aws.neon.tech",
-        "DB_PORT": "5432",
-        "USERNAME": "amm834",
-        "DB_PASSWORD": "tlhLfmqH8XW0",
-        "DATABASE": "neondb",
-        "DB_ENDPOINT": "",
-
+        "DATABASE_URL":"postgres://amm834:tlhLfmqH8XW0@ep-soft-poetry-812794.ap-southeast-1.aws.neon.tech/neondb",
+        "DB_ENDPOINT":"endpoint%3Dep-mute-recipe-123456",
         "VERCEL_DEMO_MODE": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
