--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
