feat: add prod env

--- a/vercel.json
+++ b/vercel.json
@@ -17,10 +17,14 @@
         "APP_ENV": "production",
         "APP_KEY": "base64:+naakOVSDszyMPC+wG+lmtfdHGNoSttFwh0NMYW466U=",
         "APP_URL": "https://laravel-vercel-sooty.vercel.app",
-        "APP_DEBUG": "true",
-        "DATABASE_URL": "postgres://amm834:tlhLfmqH8XW0@ep-soft-poetry-812794.ap-southeast-1.aws.neon.tech/neondb",
-        "DB_ENDPOINT": "ep-soft-poetry-812794",
-        
+        "APP_DEBUG": "false",
+        "DB_CONNECTION": "mysql",
+        "DB_HOST": "aws.connect.psdb.cloud",
+        "DB_PORT": "3306",
+        "DB_DATABASE": "breeze",
+        "DB_USERNAME": "eul9p17dskvmj2bpj2qv",
+        "DB_PASSWORD": "pscale_pw_gWIACc0hcfvTjGZZ77gWvmvmozdta2pFar8qfhfjKj0",
+        "MYSQL_ATTR_SSL_CA": "/etc/ssl/cert.pem",
         "VERCEL_DEMO_MODE": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
