--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
         "APP_ENV": "production",
         "APP_KEY": "base64:+naakOVSDszyMPC+wG+lmtfdHGNoSttFwh0NMYW466U=",
         "APP_URL": "https://laravel-vercel-sooty.vercel.app",
-        "APP_DEBUG": "false",
+        "APP_DEBUG": "true",
         "DB_CONNECTION": "mysql",
         "DB_HOST": "aws.connect.psdb.cloud",
         "DB_PORT": "3306",
