--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "setup": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "php artisan key:generate",
-            "php artisan migrate --seed"
+            "php artisan migrate --seed",
+            "php artisan passport:install"
         ],
         "test": "pest"
     },
