--- a/docker/nginx/breeze.local.conf
+++ b/docker/nginx/breeze.local.conf
@@ -10,9 +10,12 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass app:9000;
+        try_files $uri = 404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
     }
 }
