--- a/vercel.json
+++ b/vercel.json
@@ -13,10 +13,10 @@
     ],
     "outputDirectory": "public/build",
     "env": {
-        "APP_NAME": "Vercel Laravel",
+        "APP_NAME": "Breeze",
         "APP_ENV": "production",
         "APP_KEY": "base64:+naakOVSDszyMPC+wG+lmtfdHGNoSttFwh0NMYW466U=",
-        "APP_URL": "https://laravel-vercel-sooty.vercel.app",
+        "APP_URL": "https://breeze-backend-api.vercel.app",
         "APP_DEBUG": "true",
         "DB_CONNECTION": "mysql",
         "DB_HOST": "aws.connect.psdb.cloud",
@@ -26,6 +26,12 @@
         "DB_PASSWORD": "pscale_pw_gWIACc0hcfvTjGZZ77gWvmvmozdta2pFar8qfhfjKj0",
         "MYSQL_ATTR_SSL_CA": "/etc/pki/tls/certs/ca-bundle.crt",
         "VERCEL_DEMO_MODE": "true",
+        "MEDIA_DISK": "s3",
+        "AWS_ACCESS_KEY_ID": "AKIAXBIMVWMT7IV5SKMV",
+        "AWS_SECRET_ACCESS_KEY": "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",
+        "AWS_DEFAULT_REGION": "ap-southeast-1",
+        "AWS_BUCKET": "breeze-event",
+        "AWS_USE_PATH_STYLE_ENDPOINT": "false",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
