--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     },
     "routes": [
         {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        },
+        {
             "src": "/api/(.*)",
             "dest": "/api/index.php"
         }
