--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,9 @@
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "CACHE_DRIVER": "array",
+        "REDIS_HOST": "factual-kingfish-37678.upstash.io",
+        "REDIS_PASSWORD": "ca9174ed0ec8445389877bafd18b00e4",
+        "REDIS_PORT": "37678",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "VIEW_COMPILED_PATH": "/tmp/views",
