chore: update serverless region

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "version": 2,
+    "regions": ["sin1"],
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.6.0"
