--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.31",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "predis/predis": "^2.2",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10"
     },
