--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bensampo/laravel-enum": "^6.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/octane": "^2.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
