--- a/composer.json
+++ b/composer.json
@@ -65,10 +65,7 @@
         ],
         "test": "pest",
         "vercel": {
-            "build": "@php artisan octane:install && npm install && npm run dev && php artisan octane:build && php artisan octane:start",
-            "dev": "@php artisan octane:install && npm install && npm run dev && php artisan octane:start",
-            "functions-build": "@php artisan octane:install && npm install && npm run dev && php artisan octane:build",
-            "functions-start": "@php artisan octane:start"
+            "functions-start": "@php artisan octane:start --server=swoole"
         }
     },
     "extra": {
