--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
         ],
         "test": "pest",
         "vercel": {
+            "functions-build": "@php artisan octane:install",
             "functions-start": "@php artisan octane:start"
         }
     },
