--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         ],
         "test": "pest",
         "vercel": {
-            "functions-build": "@php artisan octane:install",
+            "functions-build": "@php artisan octane:install --server=swoole",
             "functions-start": "@php artisan octane:start"
         }
     },
