--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/vapor-core": "^2.31",
         "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-medialibrary": "^10.0.0",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "spiral/roadrunner-cli": "^2.5.0",
+        "spiral/roadrunner-http": "^3.0.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -65,8 +67,8 @@
         ],
         "test": "pest",
         "vercel": {
-            "functions-build": "@php artisan octane:install --server=swoole",
-            "functions-start": "@php artisan octane:start"
+            "functions-build": "@php artisan octane:install --server=roadrunner",
+            "functions-start": "@php artisan octane:start --server=roadrunner"
         }
     },
     "extra": {
