--- a/.env
+++ b/.env
@@ -8,20 +8,20 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=breeze_backend
-#DB_USERNAME=root
-#DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=aws.connect.psdb.cloud
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=breeze
-DB_USERNAME=eul9p17dskvmj2bpj2qv
-DB_PASSWORD=pscale_pw_gWIACc0hcfvTjGZZ77gWvmvmozdta2pFar8qfhfjKj0
-MYSQL_ATTR_SSL_CA=/etc/ssl/certs/ca-certificates.crt
+DB_DATABASE=breeze_backend
+DB_USERNAME=root
+DB_PASSWORD=
+
+#DB_CONNECTION=mysql
+#DB_HOST=aws.connect.psdb.cloud
+#DB_PORT=3306
+#DB_DATABASE=breeze
+#DB_USERNAME=eul9p17dskvmj2bpj2qv
+#DB_PASSWORD=pscale_pw_gWIACc0hcfvTjGZZ77gWvmvmozdta2pFar8qfhfjKj0
+#MYSQL_ATTR_SSL_CA=/etc/ssl/certs/ca-certificates.crt
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
