--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Breeze
 APP_ENV=local
 APP_KEY=base64:IwKNXPN6C2fvdlRaM8Pb97rl94KcMgTw87kpAa1kCCM=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://breeze.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
