fix: suggestion service is requeseting to the wrong endpoint of suggestion service

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:IwKNXPN6C2fvdlRaM8Pb97rl94KcMgTw87kpAa1kCCM=
 APP_DEBUG=true
 APP_URL=http://breeze.test
 
+SUGGESTION_API_URL=https://breeze-suggestion-service.vercel.app
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
