feat: add user activity timeline

--- a/.env
+++ b/.env
@@ -55,7 +55,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 #AWS_USE_PATH_STYLE_ENDPOINT=false
 
 
-MEDIA_DISK=s3 # local, s3, public
+MEDIA_DISK=public # local, s3, public
 AWS_ACCESS_KEY_ID=AKIAXBIMVWMT7IV5SKMV
 AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=ap-southeast-1
