--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "predis/predis": "^2.2",
         "spatie/laravel-medialibrary": "^10.0.0",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "staudenmeir/laravel-adjacency-list": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
