--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.31",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "overtrue/laravel-favorite": "^5.1",
         "overtrue/laravel-follow": "^5.1",
+        "overtrue/laravel-like": "^5.1",
         "predis/predis": "^2.2",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
