--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   nginx:
     build:
       context: .
-      dockerfile: docker/nginx.dockerfile
+      dockerfile: container/nginx.dockerfile
       args:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
@@ -36,7 +36,7 @@ services:
   php:
     build:
       context: .
-      dockerfile: docker/php.dockerfile
+      dockerfile: container/php.dockerfile
       args:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
