--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,21 @@
 APP_NAME=Breeze
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:IwKNXPN6C2fvdlRaM8Pb97rl94KcMgTw87kpAa1kCCM=
 APP_DEBUG=true
-APP_URL=http://breeze.local
+APP_URL=http://breeze.test
+
+SUGGESTION_API_URL=suggestion-api.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=breeze
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,6 +39,7 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+MEDIA_DISK=public# local, s3, public
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
