chore(test): add load test

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Breeze
 APP_ENV=local
 APP_KEY=base64:IwKNXPN6C2fvdlRaM8Pb97rl94KcMgTw87kpAa1kCCM=
 APP_DEBUG=true
-APP_URL=http://breeze.test
+APP_URL=http://breeze-poly.test/
 
 SUGGESTION_API_URL=suggestion-api.test
 
