--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "pestphp/pest": "^2.6",
+        "pestphp/pest-plugin-stressless": "^2.2",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
